# diffusionGPT

./: .gitignore  LICENSE  README.md  app.py  chainlit.md  download_data.py  generate.py  main.py  preprocess_chat_dataset.py  pyproject.toml  sft.py  sweep.py  test.py  train.py
.chainlit/: config.toml
configs/: config.yaml  nanochat_llm.yaml  sft.yaml
model/: cdcd.py  embeddings.py  loss.py  scheduler.py  transformer.py
scripts/: prepare_model_upload.py  sweep.sh  upload_model.py
src/: DiffusionTrainingArguments.py  argument_classes.py  data_utils.py  pipeline.py  trainer.py  trainer_callbacks.py  utils.py
tasks/: Task.py  __init__.py  everyday.py  nemotron.py  smoltalk.py
